Fix_search_&_edit_screen_bugs